# QuadrotorPlanning

./: CMakeLists.txt  package.xml
scripts/: gif_creator.py  paths.txt  plotting.py  update_frame.py
src/: SimpleMotionPlanning.cpp  WindowedPlanning.cpp  simpleSE3.cpp
